--- a/ns nizam.html
+++ b/ns nizam.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY-SIMPLE-WEBSITE</title>
+    <link rel="stylesheet" href="style-ns/ns.css">
 </head>
 <body>
-    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque pariatur, adipisci culpa expedita sunt recusandae dolorum nam quas provident accusantium repellendus. Eveniet magni cum odit iusto mollitia minima ipsum consequatur</P>
+    <div>
+        <h3><i><b>My frist website</b></i></h3>
+    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque pariatur,
+     adipisci culpa expedita sunt recusandae dolorum nam quas provident accusantium repellendus.
+     Eveniet magni cum odit iusto mollitia minima ipsum consequatur</P>
+    </div>
 </body>
 </html>
 
