add the second and third

--- a/ns nizam.html
+++ b/ns nizam.html
@@ -13,6 +13,27 @@
      adipisci culpa expedita sunt recusandae dolorum nam quas provident accusantium repellendus.
      Eveniet magni cum odit iusto mollitia minima ipsum consequatur</P>
     </div>
+    <div>
+        <h3><i><b>My secomd website</b></i></h3>
+    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque pariatur,
+     adipisci culpa expedita sunt recusandae dolorum nam quas provident accusantium repellendus.
+     Eveniet magni cum odit iusto mollitia minima ipsum consequatur</P>
+    </div>
+    <div>
+        <h3><i><b>My Third website</b></i></h3>
+    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque pariatur,
+     adipisci culpa expedita sunt recusandae dolorum nam quas provident accusantium repellendus.
+     Eveniet magni cum odit iusto mollitia minima ipsum consequatur</P>
+    </div>
 </body>
+<div>
+    <ol>
+        <li>The programming hero course</li>
+        <li>The University course</li>
+        <li>My extra coure</li>
+        <li>My ct sidule</li>
+    </ol>
+
+</div>
 </html>
 
