addd second part

--- a/ns nizam.html
+++ b/ns nizam.html
@@ -35,5 +35,13 @@
     </ol>
 
 </div>
+<div>
+    <h3>HOW TO PUSH INCRIMENTAL CODE IN  GIT WITH COMMAND FORM</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful commit message"</li>
+        <li>git push</li>
+    </ul>
+</div>
 </html>
 
