--- a/ns nizam.html
+++ b/ns nizam.html
@@ -43,5 +43,9 @@
         <li>git push</li>
     </ul>
 </div>
+<div>
+    <h4>My grandmother and grandfather</h4>
+    <img src="R.jfif"/>
+</div>
 </html>
 
